--- a/app/src/main/res/layout/activity_add_tea.xml
+++ b/app/src/main/res/layout/activity_add_tea.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context=".AddEditTeaActivity">
 
     <EditText
@@ -28,15 +27,15 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
         tools:layout_editor_absoluteX="16dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/edit_text_origin"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="Price"
-        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:layout_marginTop="24dp"
+        android:hint="Origin"
+        android:inputType="textMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
-        tools:layout_editor_absoluteX="16dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="16dp" />
 
 
     <include
