--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -14,5 +14,6 @@
     <style name="ToolbarStyle" parent="Theme.AppCompat.Light">
         <item name="android:background">@color/toolbar</item>
     </style>
+
 
 </resources>
