--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never"></item>
 
-    <item android:id="@+id/action_favorite"
-        android:title="@string/action_favorite"
-        app:showAsAction="never"></item>
 
+<item android:id="@+id/action_delete_all_teas"
+    android:title="@string/action_delete_all_teas"
+    app:showAsAction="never"></item>
 
 </menu>
