--- a/app/src/main/res/layout/fragment_aboutapp.xml
+++ b/app/src/main/res/layout/fragment_aboutapp.xml
@@ -12,21 +12,46 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="@string/settings_about"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:textColor="?attr/textColor"/>
+        android:textColor="?attr/textColor"
+        android:textSize="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="80dp"
+        android:textStyle="bold"/>
+
 
     <TextView
         android:id="@+id/aboutAppText"
+        android:layout_width="347dp"
+        android:layout_height="161dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/about_app"
+        android:textColor="?attr/textColor"
+        android:textSize="21dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/about_app"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:layout_editor_absoluteX="0dp"
-        android:textColor="?attr/textColor"/>
+        android:text="@string/authors"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:layout_editor_absoluteX="92dp"
+        android:textStyle="italic"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="194dp"
+        android:layout_height="245dp"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/icon8_tea"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aboutAppText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
