--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,8 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:context=".SettingsFrag"
+    android:background="?attr/backgroundColor"
+    tools:context=".SettingsFragment"
     android:padding="24dp">
 
 
@@ -18,7 +18,7 @@
         android:textOn="@string/settings_theme_light" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_aboutApp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/settings_about" />
