--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -4,5 +4,4 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/toolbarColor"
-    ></androidx.appcompat.widget.Toolbar>
+    android:background="?attr/toolbarColor"></androidx.appcompat.widget.Toolbar>
