--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -8,44 +8,31 @@
     android:background="?attr/backgroundColor">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:background="?attr/backgroundColor">
+        android:background="?attr/backgroundColor"
+        android:padding="8dp">
 
 
         <TextView
-            android:id="@+id/text_view_id"
-            android:layout_width="wrap_content"
+            android:id="@+id/text_view_categoryName"
+            android:layout_width="374dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="1"
-            android:layout_alignParentRight="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="?attr/textColor"/>
-
-
-
-        <TextView
-            android:id="@+id/text_view_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:maxLines="1"
             android:text="Name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_toStartOf="@id/text_view_id"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/text_view_id"
-            android:layout_alignParentLeft="true"
-            android:textColor="?attr/textColor"/>
+            android:textColor="?attr/textColor" />
 
-            <TextView
-                android:id="@+id/text_view_virtues"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_name"
-                android:text="Virtues"
-                android:textColor="?attr/textColor"/>
+        <TextView
+            android:id="@+id/text_view_virtues"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_view_categoryName"
+            android:layout_marginTop="0dp"
+            android:text="Virtues"
+            android:textColor="?attr/textColor" />
 
     </RelativeLayout>
 
