--- a/app/src/main/res/layout/tea_item.xml
+++ b/app/src/main/res/layout/tea_item.xml
@@ -9,34 +9,22 @@
 
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:background="?attr/backgroundColor">
+        android:background="?attr/backgroundColor"
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/text_view_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_alignParentRight="true"
-            android:textColor="?attr/textColor"/>
 
         <TextView
             android:id="@+id/text_view_title"
-            android:layout_width="wrap_content"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:maxLines="1"
-            android:layout_toStartOf="@id/text_view_id"
-            android:ellipsize="end"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/text_view_id"
-            android:textColor="?attr/textColor"/>
-
+            android:textColor="?attr/textColor" />
 
 
         <TextView
@@ -45,10 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_title"
             android:text="Description"
-            android:textColor="?attr/textColor"/>
-
-
-
+            android:textColor="?attr/textColor" />
 
 
     </RelativeLayout>
