--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -16,12 +16,12 @@
 
         <TextView
             android:id="@+id/text_view_categoryName"
-            android:layout_width="374dp"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:ellipsize="end"
             android:maxLines="1"
-            android:text="Name"
+            android:text="Title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="?attr/textColor" />
 
