--- a/app/src/main/res/menu/tea_menu.xml
+++ b/app/src/main/res/menu/tea_menu.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <item android:id="@+id/action_delete_all_teas"
+        android:title="@string/action_delete_all_teas"
+        app:showAsAction="never"></item>
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"></item>
 
-
-<item android:id="@+id/action_delete_all_teas"
-    android:title="@string/action_delete_all_teas"
-    app:showAsAction="never"></item>
+    <item android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        app:showAsAction="never"></item>
 
 </menu>
